# comicdrama-creator-workflow

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: api.md  copyright.md  enterprise-integration.md  llm-provider.md  prompt-design.md  source-imports.md  workflow.md
examples/: sample-config.json  sample-novel.md
examples/outputs/: sample-workflow.json  sample-workflow.md
prompts/: character-naming.md  convert-script.md  extract-elements.md  simplify.md  storyboard.md
schemas/: workflow-config.schema.json  workflow-result.schema.json
src/comicdrama/: __init__.py  cli.py
src/comicdrama/api/: __init__.py  app.py
src/comicdrama/core/: __init__.py  exporters.py  importers.py  llm.py  models.py  processor.py  text.py
src/comicdrama/static/: app.js  index.html  styles.css
tests/: test_importers.py  test_processor.py
